# airportsdata

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CHANGES_240310.rst  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  README_AIP.rst  README_FAA.rst  README_IATA.rst  README_identifiers.rst  RELEASE.rst  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  tox.ini  update_readme_counts.py
,github/workflows/: ci-cd.yaml
.github/: dependabot.yaml
.github/workflows/: ci-cd.yaml
airportsdata/: __init__.py  airports.csv  iata_macs.csv
pre-commit/: sort_and_fix.py  update_readme_counts.py
tests/: airportsdata_test.py  requirements_pre-commit.txt  requirements_precommit.txt  requirements_testing.txt  test.py  test_airportsdata.py
utils/: sort_and_fix.py  update_readme_counts.py
